# Vex_Ads

./: .env.example  .gitignore  README.md  config.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_migration.py  test_templates.py
api/: dependencies.py
api/routes/: assets.py  competitors.py  generate.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx
migrations/: 001_add_template_version.sql  002_add_quality_scores.sql  003_adangle_generated_ad_sets.sql  007_clean_schema_for_visual_bible.sql
models/: database.py  schemas.py
services/: ai_generator.py  creative_director.py  image_compositor.py  image_generator.py  meta_api.py  storage.py  visual_bible_creator.py
